--- a/mop/penis.html
+++ b/mop/penis.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dressed for a Party in a Costume Hat with Socks and Sandals</title>
+    <title>Hidden part of the penis</title>
     <link rel="stylesheet" href="https://indestructibletype.com/fonts/Bodoni/Bodoni.css" type="text/css" charset="utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
@@ -12,22 +12,22 @@
     <div id="topfade" class="rightstick"></div>
     <div id="bottomfade" class="rightstick"></div>
     <div class="left">
-      <a href="wikipedia.html" style="cursor: zoom-out;"><img src="resource/hatMan.jpg"></a><br><br><br><br>
+      <a href="wikipedia.html" style="cursor: zoom-out;"><img src="resource/penis.jpg"></a><br><br><br><br>
     </div>
     <div class="right">
       <h1>&nbsp;</h1>
-      <h2>Dressed for a Party in a Costume Hat with Socks and Sandals</h2>
+      <h2>Hidden part of the penis</h2>
       <p>
-        <a href="https://commons.wikimedia.org/wiki/User:Oddman47" target="_blank"><b>Oddman47</b></a> &nbsp; &nbsp; 30&nbsp;June&nbsp;2015
+        <a href="https://commons.wikimedia.org/wiki/User:Richiex" target="_blank"><b>Richiex</b></a> &nbsp; &nbsp; 11&nbsp;December&nbsp;2018
       <p><br>
-        A nudit man is dressed for a party in a costume hat and sandals with socks, and holding a beer bottle
+        My penis is bigger than what is its visible part. It continues behind my testicles and all the way down to near the anus
       </p>
       <p>
         <br>
-        <a href="https://commons.wikimedia.org/wiki/File:Dressed_for_a_Party_in_a_Costume_Hat_with_Socks_and_Sandals.jpg" target="_blank">View the picture this drawing is based off of &rarr;</a>
+        <a href="https://2.bp.blogspot.com/-jDOIEjHClu4/XA-cqFM-nCI/AAAAAAAAAc8/mCSlWGQI8WAinvKp5pGeyyYgTiY7i12dwCLcBGAs/s1600/IMG_0357.JPG" target="_blank">View the picture this drawing is based off of &rarr;</a>
       </p>
       <p>
-        <a href="https://commons.wikimedia.org/wiki/Special:ListFiles/Oddman47" target="_blank">View other photos uploaded by Oddman47 &rarr;</a>
+        <a href="https://commons.wikimedia.org/w/index.php?title=Special:ListFiles&user=Richiex" target="_blank">View other photos uploaded by Richiex &rarr;</a>
       </p>
       <p><br>
         <a href="wikipedia.html">Return to Gallery &rarr;</a>
