--- a/mop/wikiabout.html
+++ b/mop/wikiabout.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Meditations on Pornography</title>
+    <title>Gallery of Wikipedia Nudes</title>
     <link rel="stylesheet" href="https://indestructibletype.com/fonts/Bodoni/Bodoni.css" type="text/css" charset="utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <h1 id="head">Meditations on Pornography</h1>
+    <h1 id="head">Gallery of Wikipedia Nudes</h1>
     <div id="topfade"></div>
-    <div id="bottomfade"></div>
+    <div id="bottomfadei"></div>
     <div class="left">
       <h1>&nbsp;</h1>
       <p>
@@ -26,6 +26,7 @@
       </p>
       <br><br>
     </div>
-    <div id="navright"><a href="dworkin.html">Enter museum &rarr;</a></div>
+    <div id="navleft"><a href="dworkin.html">&larr; Dworkin and Discourse</a></div>
+    <div id="navright"><a href="wikipedia.html">Enter gallery &rarr;</a></div>
   </body>
 </html>
