--- a/mop/wikiabout.html
+++ b/mop/wikiabout.html
@@ -13,16 +13,7 @@
     <div class="left">
       <h1>&nbsp;</h1>
       <p>
-        In the western world, sexual imagery is omnipresent. It is used to sell us products, it floods television shows and movies, and with the advent of the internet, pornography is more acessible to more people then ever.
-      </p>
-      <p>
-        We may look at this and conclude that we are quite sexually liberated. In a way we are. And yet, frank discussions of pornography and sexuality in the digital era can be uncommon. Perhaps porn, like sex, is seen as something private. Having a public discourse about what you do in the privacy of your own home feels a bit invasive.
-      </p>
-      <p>
-        But is porn really private? The internet is a public space. Pornographic videos can receive hundreds of millions of views, and with the ability to communicate directly with creators, as well as upload self made pornography, the boundreis between consumer and creator, private and public, are blurred.
-      </p>
-      <p>
-        <i>Meditations on Pornography</i> is a virtual gallery space that explores porn in the digital era. As the name implies, some of the material is sexually graphic in nature. By entering the museum you acknowledge that viewing such material is something you're willing and able to do.
+        I will write something explaining things here.
       </p>
       <br><br>
     </div>
