--- a/mop/blowjob.html
+++ b/mop/blowjob.html
@@ -29,10 +29,8 @@
       <p>
         <a href="https://commons.wikimedia.org/wiki/Special:ListFiles/Ulflarsen" target="_blank">View other photos uploaded by Ulflarsen &rarr;</a>
       </p>
-      <p><br>
-        <a href="wikipedia.html">Return to Gallery &rarr;</a>
-      </p>
       <br><br>
     </div>
+    <div id="navright"><a href="wikipedia.html">Return to Gallery &rarr;</a></div>
   </body>
 </html>
