--- a/mop/penis.html
+++ b/mop/penis.html
@@ -29,10 +29,8 @@
       <p>
         <a href="https://commons.wikimedia.org/w/index.php?title=Special:ListFiles&user=Richiex" target="_blank">View other photos uploaded by Richiex &rarr;</a>
       </p>
-      <p><br>
-        <a href="wikipedia.html">Return to Gallery &rarr;</a>
-      </p>
       <br><br>
     </div>
+    <div id="navright"><a href="wikipedia.html">Return to Gallery &rarr;</a></div>
   </body>
 </html>
