--- a/mop/dworkin.html
+++ b/mop/dworkin.html
@@ -13,13 +13,15 @@
     <div class="galout">
     <div class="galone" onscroll="scrollin()">
     <div class="galinner">
-       <a href="video.html" onmouseover="showTitle('Why Men Like Pornography & Prostitution So Much')" onmouseout="leave()"><img class="wide" src="resource/video.png"></a>
-       <a href="letter.html" onmouseover="showTitle('Letter from the artist to Andrea Dworkin')" onmouseout="leave()"><img src="resource/letter.png"></a>
+      <a href="video.html" onmouseover="showTitle('Why Men Like Pornography & Prostitution So Much')" onmouseout="leave()"><img class="wide" src="resource/video.png"></a>
+      <a href="letter.html" onmouseover="showTitle('Letter From the Artist to Andrea Dworkin')" onmouseout="leave()"><img src="resource/letter.png"></a>
+      <a href="whatsitfor.html" onmouseover="showTitle('Sex: What is it for?')" onmouseout="leave()"><img class="wide" src="resource/videoii.png"></a>
+      <a href="rp.html" onmouseover="showTitle('Strangers on a Train')" onmouseout="leave()"><img src="resource/rp.png"></a>
     </div>
     </div>
   </div>
   <div id="title"></div>
-  <div id="navleft"><a href="overview.html">&larr; Exhibition overview</a></div>
+  <div id="navleft"><a href="overview.html">&larr; directory</a></div>
   <div id="navright"><a href="wikiabout.html">Gallery of Wikipedia Nudes &rarr;</a></div>
   <script>
   function scrollin() {
