--- a/mop/pregnantWoman.html
+++ b/mop/pregnantWoman.html
@@ -10,7 +10,7 @@
   <body>
     <h1 id="head">Gallery of Wikipedia Nudes</h1>
     <div id="topfade" class="rightstick"></div>
-    <div id="bottomfade" class="rightstick"></div>
+    <div id="bottomfadei" class="rightstick"></div>
     <div class="left">
       <a href="wikipedia.html" style="cursor: zoom-out;"><img src="resource/pregnantWoman.jpg"></a><br><br><br><br>
     </div>
@@ -31,6 +31,6 @@
       </p>
       <br><br>
     </div>
-    <div id="navright"><a href="wikipedia.html">Return to Gallery &rarr;</a></div>
+    <div id="navright"><a onclick="history.back()">Return to Gallery &rarr;</a></div>
   </body>
 </html>
