--- a/mop/video.html
+++ b/mop/video.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Victoria secret bralette</title>
+    <title>Why Men Like Pornography & Prostitution So Much</title>
     <link rel="stylesheet" href="https://indestructibletype.com/fonts/Bodoni/Bodoni.css" type="text/css" charset="utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
@@ -12,22 +12,19 @@
     <div id="topfade" class="rightstick"></div>
     <div id="bottomfadei" class="rightstick"></div>
     <div class="left">
-      <a href="wikipedia.html" style="cursor: zoom-out;"><img src="resource/bra.jpg"></a><br><br><br><br>
+      <iframe src="https://www.youtube.com/embed/gx5g379tIGs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br><br>
     </div>
     <div class="right">
       <h1>&nbsp;</h1>
-      <h2>Victoria secret bralette</h2>
+      <h2>Why Men Like Pornography & Prostitution So Much</h2>
       <p>
-        <a href="https://commons.wikimedia.org/wiki/Special:Contributions/Nowforever" target="_blank"><b>Nowforever</b></a> &nbsp; &nbsp; 2&nbsp;April&nbsp;2017
+        <a href="http://www.andreadworkin.com/" target="_blank"><b>Andrea Dworkin</b></a> &nbsp; &nbsp; 1989
       <p><br>
-         victoria secret bralette
+        Keynote Speech at International Trafficking Conference
       </p>
       <p>
         <br>
-        <a href="https://commons.wikimedia.org/wiki/File:Victoria_secret_bralette.jpg" target="_blank">View the picture this drawing is based off of &rarr;</a>
-      </p>
-      <p>
-        <a href="https://commons.wikimedia.org/wiki/Special:ListFiles/Nowforever" target="_blank">View other photos uploaded by Nowforever &rarr;</a>
+        <a href="http://www.andreadworkin.com/audio/" target="_blank">Andrea Dworkin Video & Audio File Archive &rarr;</a>
       </p>
       <br><br>
     </div>
