--- a/mop/dworkin.html
+++ b/mop/dworkin.html
@@ -12,7 +12,7 @@
     <div id="floatingScroll">&nbsp;Scroll (&#x2195;) to navigate&nbsp;</div>
     <div class="galout">
     <div class="galone" onscroll="scrollin()">
-    <div class="galinner">
+    <div class="galinner" style="width: 250vh; margin-left: -125vh; transform: rotate(90deg) translate(125vh,-30vh);">
       <a href="video.html" onmouseover="showTitle('Why Men Like Pornography & Prostitution So Much')" onmouseout="leave()"><img class="wide" src="resource/video.png"></a>
       <a href="letter.html" onmouseover="showTitle('Letter From the Artist to Andrea Dworkin')" onmouseout="leave()"><img src="resource/letter.png"></a>
       <a href="whatsitfor.html" onmouseover="showTitle('Sex: What is it for?')" onmouseout="leave()"><img class="wide" src="resource/videoii.png"></a>
@@ -21,8 +21,8 @@
     </div>
   </div>
   <div id="title"></div>
-  <div id="navleft"><a href="overview.html">&larr; directory</a></div>
-  <div id="navright"><a href="wikiabout.html">Gallery of Wikipedia Nudes &rarr;</a></div>
+  <div id="navleft"><a href="directory.html">&larr; directory</a></div>
+  <div id="navright"><a href="wikiabout.html">Gallery of Wikipedia Nudes&nbsp;&rarr;</a></div>
   <script>
   function scrollin() {
     document.getElementById("floatingScroll").innerHTML = "";
