--- a/mop/index.html
+++ b/mop/index.html
@@ -27,6 +27,6 @@
       </p>
       <br><br>
     </div>
-    <div id="navright"><a href="dworkin.html">Enter museum &rarr;</a></div>
+    <div id="navright"><a href="dworkin.html">Enter museum&nbsp;&rarr;</a></div>
   </body>
 </html>
