--- a/mop/rp.html
+++ b/mop/rp.html
@@ -373,7 +373,7 @@
         <p><b>ShyLarry</b><br>"get off at birghton with me"</p>
         <p id="marysue"><b>MarySue</b><br>"can we sit back down?"</p>
         <p><b>ShyLarry</b><br>"of course"</p>
-        <p id="marysue"><b>MarySue</b><br>"okay" I arrave the tray table so I can rest my head on my propped up arm</p>
+        <p id="marysue"><b>MarySue</b><br>"okay" I arrange the tray table so I can rest my head on my propped up arm</p>
         <p id="marysue"><b>MarySue</b><br>and I look at you composing my thoughts</p>
         <p id="marysue"><b>MarySue</b><br>"Larry, what is it you want from me?"</p>
         <p id="marysue"><b>MarySue</b><br>"and tell me everything?"</p>
@@ -420,6 +420,7 @@
         <p><b>ShyLarry</b><br>ok ıim here</p>
         <p><b>ShyLarry</b><br>will be at the washing machine</p>
         <p><b>ShyLarry</b><br>wow thank you I am honoured. seriously. you are so sweet</p>
+        <p id="marysue"><b>MarySue</b><br>ok I will see you</p>
         <p><b>ShyLarry</b><br>sure</p>
       </div>
       <br>
@@ -434,10 +435,10 @@
       </p>
       <p>
         <br>
-        <a href="https://www.literotica.com/newchat/" target="_blank">Link to erotic role playing forum &rarr;</a>
+        <a href="https://www.literotica.com/newchat/" target="_blank">Link to erotic role playing forum&nbsp;&rarr;</a>
       </p>
-      <br><br>
+      <br><br><br><br>
     </div>
-    <div id="navright"><a onclick="history.back()">Return to Gallery &rarr;</a></div>
+    <div id="navright"><a onclick="history.back()">Return to Gallery&nbsp;&rarr;</a></div>
   </body>
 </html>
