--- a/mop/video.html
+++ b/mop/video.html
@@ -24,10 +24,10 @@
       </p>
       <p>
         <br>
-        <a href="http://www.andreadworkin.com/audio/" target="_blank">Andrea Dworkin Video & Audio File Archive &rarr;</a>
+        <a href="http://www.andreadworkin.com/audio/" target="_blank">Andrea Dworkin Video & Audio File Archive&nbsp;&rarr;</a>
       </p>
-      <br><br>
+      <br><br><br><br>
     </div>
-    <div id="navright"><a onclick="history.back()">Return to Gallery &rarr;</a></div>
+    <div id="navright"><a onclick="history.back()">Return to Gallery&nbsp;&rarr;</a></div>
   </body>
 </html>
