--- a/mop/whatsitfor.html
+++ b/mop/whatsitfor.html
@@ -22,8 +22,8 @@
       <p><br>
         Channel 4's <i>After Dark</i> panel discussion on sex featuring Dr.&nbsp;Julia Ronder, Roz Kaveney, Anthony Burgess, Dr.&nbsp;Jack Dominian, Andrea Dworkin, and Prof.&nbsp;Jim Haynes.
       </p>
-      <br><br>
+      <br><br><br><br>
     </div>
-    <div id="navright"><a onclick="history.back()">Return to Gallery &rarr;</a></div>
+    <div id="navright"><a onclick="history.back()">Return to Gallery&nbsp;&rarr;</a></div>
   </body>
 </html>
