--- a/mop/wikiabout.html
+++ b/mop/wikiabout.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://indestructibletype.com/fonts/Bodoni/Bodoni.css" type="text/css" charset="utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
+    <meta name=viewport content="width=device-width, initial-scale=0.8">
   </head>
   <body>
     <h1 id="head">Gallery of Wikipedia Nudes</h1>
@@ -13,11 +14,20 @@
     <div class="left">
       <h1>&nbsp;</h1>
       <p>
-        I will write something explaining things here.
+        The dynamics at play in the world of online pornography create conditions for exploitation. The pornographic actor, often a younger woman, is asked to present their naked body for the sexual gratification of the consumer, in exchange for money.
       </p>
-      <br><br>
+      <p>
+        Sometimes people enter this line of work out a of genuine passion for it, but just as often, sex workers need the money for life essentials. The well-being of the performer is not a consideration.
+      </p>
+      <p>
+        But what if we were to reverse the dynamics at play? What if, instead of the viewer’s erotic enjoyment being the primary consideration, it became the erotic enjoyment of the performer? What if, instead of having a financial incentive, monetization were to be discouraged and in some cases banned outright? Would the face of pornography change? Would depictions of sex become less harmful?
+      </p>
+      <p>
+        The <i>Gallery of Wikipedia Nudes</i> features drawings of self submitted sexual imagery to the Wikipedia Commons. These people are doing it for themselves, they are not making money, and the audience is unsuspecting internet users, some of which may not be seeking out pornographic pictures. They are unsolicited dick pics.
+      </p>
+      <br><br><br><br>
     </div>
     <div id="navleft"><a href="dworkin.html">&larr; Dworkin and Discourse</a></div>
-    <div id="navright"><a href="wikipedia.html">Enter gallery &rarr;</a></div>
+    <div id="navright"><a href="wikipedia.html">Enter gallery&nbsp;&rarr;</a></div>
   </body>
 </html>
