--- a/mop/wikipedia.html
+++ b/mop/wikipedia.html
@@ -23,7 +23,7 @@
   </div>
   <div id="title"></div>
   <div id="navleft"><a href="wikiabout.html">&larr; About</a></div>
-  <div id="navright"><a href="dworkin.html">Dworkin and Discourse &rarr;</a></div>
+  <div id="navright"><a href="exit.html">Exit&nbsp;&rarr;</a></div>
   <script>
   function scrollin() {
     document.getElementById("floatingScroll").innerHTML = "";
