--- a/mop/blowjob.html
+++ b/mop/blowjob.html
@@ -24,13 +24,13 @@
       </p>
       <p>
         <br>
-        <a href="https://commons.wikimedia.org/wiki/File:Ulf_Larsen_and_teen_01.jpg" target="_blank">View the picture this drawing is based off of &rarr;</a>
+        <a href="https://commons.wikimedia.org/wiki/File:Ulf_Larsen_and_teen_01.jpg" target="_blank">View the picture this drawing is based off of&nbsp;&rarr;</a>
       </p>
       <p>
-        <a href="https://commons.wikimedia.org/wiki/Special:ListFiles/Ulflarsen" target="_blank">View other photos uploaded by Ulflarsen &rarr;</a>
+        <a href="https://commons.wikimedia.org/wiki/Special:ListFiles/Ulflarsen" target="_blank">View other photos uploaded by Ulflarsen&nbsp;&rarr;</a>
       </p>
-      <br><br>
+      <br><br><br><br>
     </div>
-    <div id="navright"><a onclick="history.back()">Return to Gallery &rarr;</a></div>
+    <div id="navright"><a onclick="history.back()">Return to Gallery&nbsp;&rarr;</a></div>
   </body>
 </html>
