--- a/mop/hatMan.html
+++ b/mop/hatMan.html
@@ -24,13 +24,13 @@
       </p>
       <p>
         <br>
-        <a href="https://commons.wikimedia.org/wiki/File:Dressed_for_a_Party_in_a_Costume_Hat_with_Socks_and_Sandals.jpg" target="_blank">View the picture this drawing is based off of &rarr;</a>
+        <a href="https://commons.wikimedia.org/wiki/File:Dressed_for_a_Party_in_a_Costume_Hat_with_Socks_and_Sandals.jpg" target="_blank">View the picture this drawing is based off of&nbsp;&rarr;</a>
       </p>
       <p>
-        <a href="https://commons.wikimedia.org/wiki/Special:ListFiles/Oddman47" target="_blank">View other photos uploaded by Oddman47 &rarr;</a>
+        <a href="https://commons.wikimedia.org/wiki/Special:ListFiles/Oddman47" target="_blank">View other photos uploaded by Oddman47&nbsp;&rarr;</a>
       </p>
-      <br><br>
+      <br><br><br><br>
     </div>
-    <div id="navright"><a onclick="history.back()">Return to Gallery &rarr;</a></div>
+    <div id="navright"><a onclick="history.back()">Return to Gallery&nbsp;&rarr;</a></div>
   </body>
 </html>
