--- a/mop/letter.html
+++ b/mop/letter.html
@@ -37,10 +37,10 @@
       </p>
       <p>
         <br>
-        <a href="http://www.nostatusquo.com/ACLU/dworkin/levy/" target="_blank">Over Her Dead Body &rarr;</a>
+        <a href="http://www.nostatusquo.com/ACLU/dworkin/levy/" target="_blank">Over Her Dead Body&nbsp;&rarr;</a>
       </p>
-      <br><br>
+      <br><br><br><br>
     </div>
-    <div id="navright"><a onclick="history.back()">Return to Gallery &rarr;</a></div>
+    <div id="navright"><a onclick="history.back()">Return to Gallery&nbsp;&rarr;</a></div>
   </body>
 </html>
