--- a/mop/penis.html
+++ b/mop/penis.html
@@ -24,13 +24,13 @@
       </p>
       <p>
         <br>
-        <a href="https://2.bp.blogspot.com/-jDOIEjHClu4/XA-cqFM-nCI/AAAAAAAAAc8/mCSlWGQI8WAinvKp5pGeyyYgTiY7i12dwCLcBGAs/s1600/IMG_0357.JPG" target="_blank">View the picture this drawing is based off of &rarr;</a>
+        <a href="https://2.bp.blogspot.com/-jDOIEjHClu4/XA-cqFM-nCI/AAAAAAAAAc8/mCSlWGQI8WAinvKp5pGeyyYgTiY7i12dwCLcBGAs/s1600/IMG_0357.JPG" target="_blank">View the picture this drawing is based off of&nbsp;&rarr;</a>
       </p>
       <p>
-        <a href="https://commons.wikimedia.org/w/index.php?title=Special:ListFiles&user=Richiex" target="_blank">View other photos uploaded by Richiex &rarr;</a>
+        <a href="https://commons.wikimedia.org/w/index.php?title=Special:ListFiles&user=Richiex" target="_blank">View other photos uploaded by Richiex&nbsp;&rarr;</a>
       </p>
-      <br><br>
+      <br><br><br><br>
     </div>
-    <div id="navright"><a onclick="history.back()">Return to Gallery &rarr;</a></div>
+    <div id="navright"><a onclick="history.back()">Return to Gallery&nbsp;&rarr;</a></div>
   </body>
 </html>
