--- a/mop/hatMan.html
+++ b/mop/hatMan.html
@@ -12,7 +12,7 @@
     <div id="topfade" class="rightstick"></div>
     <div id="bottomfadei" class="rightstick"></div>
     <div class="left">
-      <a onclick="history.back()"> style="cursor: zoom-out;"><img src="resource/hatMan.jpg"></a><br><br><br><br>
+      <a onclick="history.back()" style="cursor: zoom-out;"><img src="resource/hatMan.jpg"></a><br><br><br><br>
     </div>
     <div class="right">
       <h1>&nbsp;</h1>
