--- a/index.html
+++ b/index.html
@@ -967,13 +967,13 @@
 		<b>Recent Activity</b>
 	</p>
 	<p>
+		<a href="https://ewonrael.github.io/mop/">Meditations on Pornography</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.github.io/fluxus">Fluxus Game for Two</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.github.io/AI-Tweets">AI Generated Tweets</a>
-	</p>
-	<p>
-		<a href="https://cowboycollective.cc/">The Cowboy Collective</a>
 	</p>
 	<br><br>
 	<p>
@@ -1088,6 +1088,9 @@
 		<a href="https://youtu.be/6sPEavkcXfk">Interview with John Cage on Silence</a>
 	</p>
 	<p>
+		<a href="https://ewonrael.github.io/mop/">Meditations on Pornography</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.github.io/message%20in%20a%20bottle/home.html">Message in a Bottle</a>
 	</p>
 	<p>
@@ -1104,9 +1107,6 @@
 	</p>
 	<p>
 		<a href="https://ewonrael.github.io/Sarabande/index.html">Sarabande</a>
-	</p>
-	<p>
-		<a href="https://ewonrael.github.io/where%20is%20the%20museum/where">where is the art museum?</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.github.io/where%20is%20the%20museum/where">where is the art museum?</a>
