--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "Accepting money from the government? That's SOCIALISM, which is bad because I'm antisocial. I know that all USD are made by the government which they had to hand out at one point or another. I refuse any government handouts, so from now on I'm exclusively using dogecoin & barter.",
+		      "all my turkeys are cold<br>all my Lukes are warm<br>all my takes are HOT",
+		      "the bachelorette except the producers tell you if you pick anyone that isn't their top two they'll throw your choice out and force you to go with one of their favorites but those guys are both senile war criminals and everyone wants to talk about who's a better listener",
+		      "I wish the coronavirus was a person so we could put it in jail",
+		      "the day they invent waterproof laptops is the day I never leave the shower",
+		      "I can't tell that my apartment's a mess if I leave the lights off at all times",
+		      "is humans made of fire or only swordfish?",
+		      "Scooby Doo seemed like a pretty cool dog<br><br>now he's dead and they make socks with his face on it<br><br>I'm thinking every dog dies at some point",
+		      "I want oyster crackers but not for anything weird just for eating.",
+		      "the US economy: help! I've fallen and I can't get up!",
+		      "guys stop changing your twitter name to &ldquo;sentient dumpster fire&rdquo; or &ldquo;waluigi cosplayer&rdquo; or &ldquo;🦖🌝🍆🦐&rdquo; I understand it's for the memes but I'm not cool enough to get any of the references and I can't keep track of who is saying what",
+		      "sometimes I wear stilts which is no easy feet",
+		      "I don't need Garfield news<br>I am okay missing out on the latest developments in the Garfield community<br>Please do not send me Garfield related content even if it's official",
+		      "there are a lot of very hot and very stupid women online who are super into gift cards for some reason and are not very good listeners",
+		      "so lonely—<br><br>I saw a mouse scurry—<br><br>I bought a no-kill mouse trap—<br><br>I bought the finest nut butter money can buy—<br><br>I sleep—<br><br>I dream I meet the mouse and tell him I love him—<br><br>I dream the mouse appreciates the expensive nut butter—<br><br>I awake—<br><br>my mouse trap is empty—<br><br>so lonely—",
+		      "well, you can't argue Trump isn't running the country like one of his businesses",
+		      "Numbers 22:28 the LORD speaks from the mouth of an ass! He WILL answer our prayers and give us the cure to our sickness! He WILL speak from the mouth of the men and women of SCIENCE! Remain humble to our SAVOIR and when He speaks LISTEN.",
+		      "yooo if ur an alien & want to abduct me<br><br>prinsessegracht 4<br>2514an<br>den haag nl<br><br>ive got wine too hmu we on lockdown bc corona <br><br>netflix+alien egg impregnation+idk im down for whatev show me ur alien space craft lol i wanna be touched by the conciseness become one with the light rn",
+		      "I&#39;m lesbian. I love every piece of you. Feed me I&#39;m always hungry. I&#39;m yours forever",
+		      "feel free to steal my identity Channing Tatum",
+		      "Remember everyone, Mr. Rogers loved everyone no matter what or who they were. And he was raised at a very racist and sexist time. R.I.P Mr. Rogers, you helped lots of people, no matter what they were, Mr. Rogers was a big part to a lot of people.<br>Avocado toast.",
+		      "I want people to talk about me behind my back and I think that&#39;s happening a lot less now that everything&#39;s locked down",
+		      "Albert Einstein seemed like a pretty cool dude<br>now he&#39;s dead and they make socks with his face on it<br>I&#39;m thinking everybody cool dies at some point",
+		      "awe gee stuff is not looking so hot out there these days",
 		      "if under means below than der means above",
 		      "just because you're right doesn't mean I'm happy about it",
 		      "y'all ever drink fresh squeezed orange juice and think maybe there is a god and hope that maybe you'll find salvation and on that day your veins will flow with orange juice?",
