--- a/index.html
+++ b/index.html
@@ -12,6 +12,44 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "there's that part of monsters ink where Waternoose gets recorded on the TV saying &ldquo;I'll kidnap 1000 children before I let this company die!&rdquo; and they play it over and over and he looses his power because he's wrong and the real world doesn't work like this",
+		      "everyone's got dad issues especially my dad",
+		      "I wish I had a sleep deprivation kink because I would be SO TURNED ON RIGHT NOW",
+		      "everyone knows exactly what they want but when they get it their unhappy",
+		      "hey can you help me out I'm looking for someone who's older (possibly dying) with an alpaca farm and no children to inherent it please don't ask why",
+		      "Я жив, люди вокруг меня тоже к сожалению (русский юмор)",
+		      "I have mixed feelings about voodoo economics because on the one hand I'm for voodoo, especially if we can get some pro voodoo legislation passed, but on the other hand I'm against economics and don't want any institutionalized acceptance or acknowledgments of economics",
+		      "when I was like 5 years old my mom would drag me to school I'd kick and scream I hated it so—<br><br>I never stopped kicking and screaming but with age I have started doing more of the dragging—",
+		      "my favourite emoji is the &ldquo;Woman Dancing&rdquo; emoji because it is so powerful<br><br>I don't dare use it because I am frightened of its power<br><br>I love emojis",
+		      "I really dislike TED talks",
+		      "hey guys let's remember that what's essential to someone's mental health can look radically different & confusing person to person… maybe you can easily go without a haircut but for someone else it's the only form of human contact they get & is keeping them sane 🙁",
+		      "I go to the grocery store & they ask me if I have a rewards card or if I want a receipt in Dutch & I just shake my head no. This one time I'm buying wine & she asks for my id & I just shake my head no. My 3rd application to join the witness protection program has been rejected.",
+		      "Click this link to watch Rick Astley's &ldquo;Never Gonna Give You Up&rdquo; on YouTube:<br><a href='https://youtu.be/dQw4w9WgXcQ'>https://youtu.be/dQw4w9WgXcQ</a>",
+		      "apparently some people find trigger warnings upsetting for some reason? I don't really understand this, but I feel like everyone's feelings are important so maybe we should start putting warnings in videos with trigger warnings in them",
+		      "fun ideas to pass the time during lockdown:<br><br>• listen to a song in a foreign language<br>• dress really fancy & have a solo tea party<br>• set your alarm in time to watch the sunrise<br>• download MAME & play some retro arcade games<br>• venmo me $200<br>• write a relative a loving haiku<br>• write a detailed/helpful review for a local business or Amazon product<br>• draw a bicycle without using any references<br>• wear a blindfold and see how long you can go without sight<br>• wire me $200 via Western Union<br>• eat a food wrong (uncooked spaghetti or a still frozen pea)<br>• reconnect with a childhood friend<br>• invent a new cocktail and name it after yourself<br>• put $200 cash in an envelope and send it to Prinsessegracht 4, 2514 AN The Hague, Netherlands<br>• find a YouTube video with less than 200 views and write an encouraging comment",
+		      "I bought adult aspirin but there isn't even any nudity in it",
+		      "no such thing as a boring crisis, only boring people",
+		      "I don't know what I was doing at the time, but whatever it was, it wasn't me not knowing something.",
+		      "the two genders:<br><br>default<br>pink",
+		      "I don't have enough exs to drunk text",
+		      "there's so many things you can slip on such as:<br><br>•banana peel<br>•your own words<br>•business pajamas",
+		      "I really want to elope but I feel like my family is way too accepting of my romantic interests to disapprove☹️☹️",
+		      "*slips on business pajamas*",
+		      "I'm so sad",
+		      "I'm such a sucker for packaging you could put a dead pigeon in matte pastel blue box with &ldquo;organic pigeon carcass&rdquo; written in one of those pretentious millennial geometric sans serifs and I justify paying €7 more then for the ugly boxed pigeon",
+		      "I try to be fashionably late to zoom meetings",
+		      "I wish the pidgins do my house work like in cinderella so I'm always singing at them try and figure out what music dutch pidgins is into",
+		      "I really want brooding monologues to come back into fashion",
+		      "using my cell phone to self own",
+		      "pops grew up in a non-euclidean neighborhood<br><br>I think this was tough on him<br><br>he had to walk uphill both ways",
+		      "a good metric of how interesting a life you live is the number of stories involving teeth you have",
+		      "my DMs are OPEN<br>send me low-res photos of beans or spaghetti",
+		      "3 equator 4 corner earth time rotates 96 hours as a simultaneous 4 day CUBE. <br>Creation has two sex poles & 4 corner races of humans.<br>GOD IS CORNERED AS A QUEER.",
+		      "yoo honest to god I find the whole &ldquo;we're in a bad simulation&rdquo; attitude frustrating… like– everything that's going on right now is a direct consequence of our indifference to problems that have existed for my entire lifetime. This isn't a simulation.",
+		      "hair's starting to look like a late 1800s beauty contest winner",
+		      "hot take: I understand having a weight limit of 50lb on bags at the airport, but if you show up with 2 bags that are less than 100 total they should just accept it instead of making you do that holky polky shuffle around nonsense where you move two sweaters from one to the other",
+		      "drummer: somehow fundamentally misunderstands what drums are for. wants to add fills & drum solos in wildly inappropriate places. enthusiastically nods when told to just take it easy, as if a back-seat approach is a totally novel idea. very good musician.<br><br>keyboardist: indignant. thinks they are the glue holding the whole band together despite the fact that the keyboard is the only thing that can be removed without everything falling apart. suggests adding complex chords & rhythms that if implemented would make the songs worse.<br><br>bass: writes all the good songs, has all of the good ideas, gets none of the credit. not a very good performer. lanky fellow.<br><br>guitarist: originally more interested in living a bohemian rock star lifestyle then the actual music part. secretly cares now but works very hard to appear indifferent. no one is fooled.<br><br>producer: only one who shows up on time. best handle on the english language of the group. obliviously stays up until 2 in the morning getting mix just right & secretly rerecords the bass parts. thinks equipment is way more important than it actually is. supportive mom vibes",
+		      "a wise man once said:<br>&ldquo;Where are my keys?&rdquo;<br>and that wise man was me. I can't find my keys. I cannot leave the apartment without my keys because I will lock myself out. I will surely starve to death because I cannot find my keys.<br><br>I think Albert Einstein lost his keys once too.",
 		      "Accepting money from the government? That's SOCIALISM, which is bad because I'm antisocial. I know that all USD are made by the government which they had to hand out at one point or another. I refuse any government handouts, so from now on I'm exclusively using dogecoin & barter.",
 		      "all my turkeys are cold<br>all my Lukes are warm<br>all my takes are HOT",
 		      "the bachelorette except the producers tell you if you pick anyone that isn't their top two they'll throw your choice out and force you to go with one of their favorites but those guys are both senile war criminals and everyone wants to talk about who's a better listener",
