--- a/index.html
+++ b/index.html
@@ -1174,6 +1174,9 @@
 		<a href="https://ewonrael.github.io/where%20is%20the%20museum/where">where is the art museum?</a>
 	</p>
 	<p>
+		<a href="https://github.com/EwonRael/EwonRael.github.io/raw/master/Why%20is%20everyone%20so%20suicidal%20on%20social%20media.pdf">Why is Everyone so Suicidal on Social Media?</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.github.io/Zeros/story">Zeros</a>
 	</p>
 	<br><br>
