--- a/Lilac/03.html
+++ b/Lilac/03.html
@@ -3,6 +3,7 @@
   <head>
 	<title>Lilac</title>
 	<link rel="stylesheet" href="style.css"/>
+	<meta name=viewport content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   </head>
