--- a/Lilac/05.html
+++ b/Lilac/05.html
@@ -14,9 +14,9 @@
     <a id="right" href="06.html">
       <img src="sources/05a.svg">
     </a>
-    <audio controls>
+    <div id="audio"><audio controls>
      <source src="sources/05.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
-    </audio>
+    </audio></div>
   </body>
 </html>
