--- a/Lilac/07.html
+++ b/Lilac/07.html
@@ -14,9 +14,9 @@
     <a id="right" href="08.html">
       <img src="sources/07a.svg">
     </a>
-    <audio controls>
+    <div id="audio"><audio controls>
      <source src="sources/07.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
-    </audio>
+    </audio></div>
   </body>
 </html>
