--- a/Lilac/10.html
+++ b/Lilac/10.html
@@ -14,9 +14,9 @@
     <a id="right" href="11.html">
       <img src="sources/10a.svg">
     </a>
-    <audio controls>
+    <div id="audio"><audio controls>
      <source src="sources/10.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
-    </audio>
+    </audio></div>
   </body>
 </html>
