--- a/index.html
+++ b/index.html
@@ -1162,6 +1162,9 @@
 		<a href="https://cowboycollective.cc/">The Cowboy Collective</a>
 	</p>
 	<p>
+		<a href="https://ia801401.us.archive.org/22/items/flowersCookbook/flowers.pdf">Flowers</a>
+	</p>
+	<p>
 		<a href="https://ewonrael.github.io/fluxus">Fluxus Game for Two</a>
 	</p>
 	<p>
