--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 	<title>Owen Earl Official Site</title>
 	<link rel="stylesheet" href="https://indestructibletype.com/fonts/fonts.css" type="text/css" charset="utf-8" />
-	<link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/gh/SebastianAigner/twemoji-amazing@1.0.0/twemoji-amazing.css" rel="stylesheet">
     	<link rel="stylesheet" href="style.css"/>
         <meta name=viewport content="width=device-width, initial-scale=1">
 	<script src="tweets.js"></script>
